gcc/testsuite/rust/rustc/ui/typeck/apit-with-error-type-in-sig_dg.rs
type Foo = Bar;
// { dg-error ".E0412." "" { target *-*-* } .-1 }

fn check(f: impl FnOnce(Foo), val: Foo) {
    f(val);
}

fn main() {}

